<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_fach"
            android:icon="@drawable/bild10"
            android:title="@string/menu_fach"/>


        <item
            android:id="@+id/nav_spenden"
            android:icon="@drawable/bild12"
            android:title="@string/menu_spenden"/>
        <item
            android:id="@+id/nav_rechner"
            android:icon="@drawable/bild88"
            android:title="@string/Rezeptrechner"/>



    </group>

    <item
        android:id="@id/nav_settings"
        android:icon="@drawable/bild11"
        android:title="@string/menu_settings"/>

</menu>